# Hitachi_NMR5_bibyte_java2qt6_port

./: .gitignore  LICENSE  README.md  RECOVERY_BACKLOG.md  SCADA_NMR5_tool.py  analog_logic.py  bitbyte_data.py  bitbyte_logic.py  import sys.py  import tkinter as tk.py  pyproject.toml  style.qss  teste.py
cpp/: CMakeLists.txt  README.md  TECHNICAL_RISKS.md  VALIDATION_MATRIX.md  check_runtime_log.sh  check_visual_smoke_macos.sh
cpp/data/: cable_rows.csv  rtu_rows.csv
cpp/layout_baselines/: README.md
cpp/qml/: CalcField.qml  DataPanel.qml  FieldLabel.qml  Main.qml  ResultRow.qml  ResultValue.qml  SectionBox.qml  Theme.qml
cpp/scripts/: package_linux_qt.sh  package_macos_qt.sh  package_windows_qt.ps1
cpp/src/: AnalogCalculator.cpp  AnalogCalculator.h  AppBackend.cpp  AppBackend.h  PointCalculator.cpp  PointCalculator.h  TableData.cpp  TableData.h  TableProvider.cpp  TableProvider.h  main.cpp
cpp/tests/: calculator_tests.cpp
historico_codigo/: pyqt6_v0_import_sys.py
tests/: test_analog_logic.py  test_calculos.py
